// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create_operator.sql > line 12 1`] = `
[
  "CREATE OPERATOR @#@ (
   rightarg = int8,		-- prefix
   procedure = factorial
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 36,
                      "names": [
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rightarg",
                  "location": 25,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 68,
                      "names": [
                        {
                          "String": {
                            "sval": "factorial",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "procedure",
                  "location": 56,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "@#@",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 17 1`] = `
[
  "CREATE OPERATOR #%# (
   leftarg = int8,		-- fail, postfix is no longer supported
   procedure = factorial
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 35,
                      "names": [
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "leftarg",
                  "location": 25,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 97,
                      "names": [
                        {
                          "String": {
                            "sval": "factorial",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "procedure",
                  "location": 85,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "#%#",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 23 1`] = `
[
  "SELECT @#@ 24",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "location": 7,
                      "name": [
                        {
                          "String": {
                            "sval": "@#@",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 24,
                          },
                          "location": 11,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 26 1`] = `
[
  "COMMENT ON OPERATOR ###### (NONE, int4) IS 'bad prefix'",
  {
    "stmts": [
      {
        "stmt": {
          "CommentStmt": {
            "comment": "bad prefix",
            "object": {
              "ObjectWithArgs": {
                "objargs": [
                  {},
                  {
                    "TypeName": {
                      "location": 34,
                      "names": [
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "######",
                    },
                  },
                ],
              },
            },
            "objtype": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 31 1`] = `
[
  "DROP OPERATOR ###### (NONE, int4)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {},
                    {
                      "TypeName": {
                        "location": 28,
                        "names": [
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "######",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 45 1`] = `
[
  "CREATE OPERATOR !=- (
   rightarg = int8,
   procedure = factorial
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 36,
                      "names": [
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rightarg",
                  "location": 25,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 57,
                      "names": [
                        {
                          "String": {
                            "sval": "factorial",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "procedure",
                  "location": 45,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "!=-",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 53 1`] = `
[
  "SELECT 2 !=/**/ 1, 2 !=/**/ 2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 7,
                        },
                      },
                      "location": 9,
                      "name": [
                        {
                          "String": {
                            "sval": "<>",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 16,
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 19,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 19,
                        },
                      },
                      "location": 21,
                      "name": [
                        {
                          "String": {
                            "sval": "<>",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 28,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 67 1`] = `
[
  "SELECT true<>-1 BETWEEN 1 AND 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Const": {
                          "boolval": {
                            "boolval": true,
                          },
                          "location": 7,
                        },
                      },
                      "location": 11,
                      "name": [
                        {
                          "String": {
                            "sval": "<>",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Expr": {
                          "kind": "AEXPR_BETWEEN",
                          "lexpr": {
                            "A_Const": {
                              "ival": {},
                              "location": 13,
                            },
                          },
                          "location": 16,
                          "name": [
                            {
                              "String": {
                                "sval": "BETWEEN",
                              },
                            },
                          ],
                          "rexpr": {
                            "List": {
                              "items": [
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 24,
                                  },
                                },
                                {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 1,
                                    },
                                    "location": 30,
                                  },
                                },
                              ],
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 75 1`] = `
[
  "BEGIN TRANSACTION",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 125 1`] = `
[
  "CREATE OPERATOR #@%# (
   rightarg = int8,
   procedure = factorial,
   invalid_att = int8
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 37,
                      "names": [
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rightarg",
                  "location": 26,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 58,
                      "names": [
                        {
                          "String": {
                            "sval": "factorial",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "procedure",
                  "location": 46,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 86,
                      "names": [
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "invalid_att",
                  "location": 72,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "#@%#",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 132 1`] = `
[
  "CREATE OPERATOR #@%# (
   procedure = factorial
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 38,
                      "names": [
                        {
                          "String": {
                            "sval": "factorial",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "procedure",
                  "location": 26,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "#@%#",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 137 1`] = `
[
  "CREATE OPERATOR #@%# (
   rightarg = int8
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 37,
                      "names": [
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rightarg",
                  "location": 26,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "#@%#",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 150 1`] = `
[
  "  -- Need to do this so that regress_rol_op3 is not allowed USAGE via PUBLIC
SET ROLE regress_rol_op3",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 86,
                  "sval": {
                    "sval": "regress_rol_op3",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "role",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_operator.sql > line 214 1`] = `
[
  "CREATE OPERATOR ===
(
	"Leftarg" = box,
	"Rightarg" = box,
	"Procedure" = area_equal_function,
	"Commutator" = ===,
	"Negator" = !==,
	"Restrict" = area_restriction_function,
	"Join" = area_join_function,
	"Hashes",
	"Merges"
)",
  {
    "stmts": [
      {
        "stmt": {
          "DefineStmt": {
            "definition": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 35,
                      "names": [
                        {
                          "String": {
                            "sval": "box",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Leftarg",
                  "location": 23,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 54,
                      "names": [
                        {
                          "String": {
                            "sval": "box",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Rightarg",
                  "location": 41,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 74,
                      "names": [
                        {
                          "String": {
                            "sval": "area_equal_function",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Procedure",
                  "location": 60,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "===",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Commutator",
                  "location": 96,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "!==",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Negator",
                  "location": 117,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 148,
                      "names": [
                        {
                          "String": {
                            "sval": "area_restriction_function",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Restrict",
                  "location": 135,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 185,
                      "names": [
                        {
                          "String": {
                            "sval": "area_join_function",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Join",
                  "location": 176,
                },
              },
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Hashes",
                  "location": 206,
                },
              },
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "Merges",
                  "location": 217,
                },
              },
            ],
            "defnames": [
              {
                "String": {
                  "sval": "===",
                },
              },
            ],
            "kind": "OBJECT_OPERATOR",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
